fix mobile overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 
 html {
     height: 100%;
+    overflow: hidden;
 
     section, article, header, footer, nav, aside {
         display: block;
